--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
       "debug@2.2.0",
       "body-parser@1.12.4",
       "mime-types@2.0.12",
-      "webtask-tools"
+      "webtask-tools",
+      "lawgs@1.0.4"
     ]
   },
   "dependencies": {
@@ -88,6 +89,7 @@
     "immutable": "^3.8.1",
     "jsonwebtoken": "^7.1.9",
     "jwt-decode": "^2.1.0",
+    "lawgs": "1.0.4",
     "lodash": "3.10.1",
     "lru-memoizer": "^1.6.0",
     "moment": "^2.13.0",
