--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "auth0-logs-to-cloudwatch",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "This extension will continuously export your Auth0 logs to CloudWatch",
   "main": "index.js",
   "scripts": {
@@ -35,7 +35,6 @@
       "express@4.12.4",
       "express-jwt@3.1.0",
       "iconv-lite@0.4.10",
-      "lawgs@1.0.4",
       "lodash@3.10.1",
       "lru-cache@2.6.4",
       "mime-db@1.10.0",
@@ -89,6 +88,7 @@
     "immutable": "^3.8.1",
     "jsonwebtoken": "^7.1.9",
     "jwt-decode": "^2.1.0",
+    "lawgs": "^1.0.4",
     "lodash": "3.10.1",
     "lru-memoizer": "^1.6.0",
     "moment": "^2.13.0",
