--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/TDG-Platform/auth0-logs-to-cloudwatch.git"
+    "url": "git+https://github.com/saltukalakus/auth0-logs-to-cloudwatch-22"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/TDG-Platform/auth0-logs-to-cloudwatch/issues"
+    "url": "https://github.com/saltukalakus/auth0-logs-to-cloudwatch-22/issues"
   },
-  "homepage": "https://github.com/TDG-Platform/auth0-logs-to-cloudwatch#readme",
+  "homepage": "https://github.com/saltukalakus/auth0-logs-to-cloudwatch-22#readme",
   "auth0-extension": {
     "externals": [
       "async@2.1.2",
